--- a/Changes
+++ b/Changes
@@ -8,7 +8,10 @@ Module-Install-DOAPChangeSets
 Created:      2010-01-08
 Home page:    <http://search.cpan.org/dist/Module-Install-DOAPChangeSets/>
 Bug tracker:  <http://rt.cpan.org/Dist/Display.html?Queue=Module-Install-DOAPChangeSets>
-Maintainer:   Toby Inkster
+Maintainer:   Toby Inkster <mailto:tobyink@cpan.org>
 
-0.91 [2010-01-08]
+0.00_01 [2010-01-08] # Omega 1
+
+0.00_02 [2010-01-08] # Omega 2
+ - Don't recommend QNames containing '.' -- they're supported by libraptor, but illegal in Turtle.
 
