--- a/lib/Module/Install/DOAPChangeSets/Format.pod
+++ b/lib/Module/Install/DOAPChangeSets/Format.pod
@@ -120,9 +120,8 @@ Toby Inkster E<lt>tobyink@cpan.orgE<gt>.
 
 Copyright (C) 2010 by Toby Inkster
 
-This library is free software; you can redistribute it and/or modify
-it under the same terms as Perl itself, either Perl version 5.8 or,
-at your option, any later version of Perl 5 you may have available.
+This library is free software; you can redistribute it and/or modify it
+under the same terms as Perl itself.
 
 =cut
 
